Rename URL to APP_URL in Webhooks
