# swagger/v1/swagger.yaml
@@ -90,13 +90,13 @@ components:
     CreateWebhook:
       type: object
       properties:
-        url:
+        app_url:
           type: string
           description: The URL to send webhook requests to. It should be a fully qualified
             URL (e.g., https://example.com/webhook)
           example: https://myapp.com
       required:
-      - url
+      - app_url
     ResponseWebhook:
       type: object
       properties:
